@@ -28,13 +28,25 @@ import hat.KernelContext;
 import hat.buffer.BF16Array;
 import hat.buffer.F16Array;
 import hat.callgraph.KernelCallGraph;
-import hat.dialect.*;
+import hat.dialect.HATBarrierOp;
+import hat.dialect.HATF16Op;
+import hat.dialect.HATMemoryDefOp;
+import hat.dialect.HATMemoryVarOp;
+import hat.dialect.HATPtrOp;
+import hat.dialect.HATTensorOp;
+import hat.dialect.HATThreadOp;
+import hat.dialect.HATVectorOp;
+import hat.dialect.ReducedFloatType;
 import hat.phases.HATFP16Phase;
 import hat.phases.HATPhaseUtils;
 import hat.types.BF16;
 import hat.types.F16;
 import hat.types._F16;
-import jdk.incubator.code.dialect.java.*;
+import jdk.incubator.code.dialect.java.ClassType;
+import jdk.incubator.code.dialect.java.FieldRef;
+import jdk.incubator.code.dialect.java.JavaOp;
+import jdk.incubator.code.dialect.java.JavaType;
+import jdk.incubator.code.dialect.java.PrimitiveType;
 import optkl.IfaceValue;
 import jdk.incubator.code.Value;
 import optkl.OpHelper;
@@ -51,7 +63,6 @@ import optkl.codebuilders.CodeBuilder;
 import java.util.List;
 import java.util.SequencedSet;
 import java.util.concurrent.ThreadLocalRandom;
-import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
@@ -358,8 +369,8 @@ public abstract class C99HATKernelBuilder<T extends C99HATKernelBuilder<T>> exte
 
     @Override
     public final  T type( JavaType javaType) {
-        if (C99VecHandler.isVecType(scopedCodeBuilderContext().lookup(),javaType)){
-            C99VecHandler.handleType(self(),javaType);
+        if (C99VecAndMatHandler.isVecOrMatType(scopedCodeBuilderContext().lookup(),javaType)){
+            C99VecAndMatHandler.handleType(self(),javaType);
         }else if (javaType instanceof ClassType classType
                 && OpHelper.isAssignable(scopedCodeBuilderContext().lookup(), javaType, IfaceValue.class)
                 && !OpHelper.isAssignable(scopedCodeBuilderContext().lookup(), javaType, _F16.class)
@@ -450,7 +461,7 @@ public abstract class C99HATKernelBuilder<T extends C99HATKernelBuilder<T>> exte
                 _->recurse( OpHelper.asResultOrThrow(hatF16VarOp.operands().getFirst()).op()));
     }
 
-    private boolean isMixedFirstOperand(byte f32Mixed) {
+    protected boolean isMixedFirstOperand(byte f32Mixed) {
         return f32Mixed != 0 && f32Mixed != HATF16Op.HATF16BinaryOp.FIRST_OP;
     }
 
@@ -469,7 +480,18 @@ public abstract class C99HATKernelBuilder<T extends C99HATKernelBuilder<T>> exte
     public static final String VALUE = "value";
 
     private final T binaryOperationsForBfloat16( HATF16Op.HATF16BinaryOp hatf16BinaryOp) {
-        byte f32Mixed = hatf16BinaryOp.getByteFloatRepresentation();
+
+        boolean isFirstOperandReference = HATPhaseUtils.isArrayReference(lookup(), hatf16BinaryOp.operands().get(0));
+        boolean isSecondOperandReference = HATPhaseUtils.isArrayReference(lookup(), hatf16BinaryOp.operands().get(1));
+        final byte f32Mixed;
+        if (!isFirstOperandReference && HATPhaseUtils.isOperandF32(hatf16BinaryOp.operands().get(0))) {
+            f32Mixed = HATF16Op.HATF16BinaryOp.FIRST_OP;
+        } else if (!isSecondOperandReference && HATPhaseUtils.isOperandF32(hatf16BinaryOp.operands().get(1))) {
+            f32Mixed = HATF16Op.HATF16BinaryOp.LAST_OP;
+        } else {
+            f32Mixed = 0x00;
+        }
+
         paren(_-> bf16Type());
         brace(_-> {
             paren(_-> {
@@ -480,8 +502,7 @@ public abstract class C99HATKernelBuilder<T extends C99HATKernelBuilder<T>> exte
                 }
                 recurse( OpHelper.asResultOrThrow(hatf16BinaryOp.operands().getFirst()).op());
 
-                List<Boolean> references = hatf16BinaryOp.references();
-                if (references.getFirst()) {
+                if (isFirstOperandReference) {
                     rarrow().id(VALUE);
                 } else if (!OpHelper.isPrimitiveResult(hatf16BinaryOp.operands().getFirst())) {
                     dot().id(VALUE);
@@ -497,7 +518,7 @@ public abstract class C99HATKernelBuilder<T extends C99HATKernelBuilder<T>> exte
                 }
 
                 recurse(OpHelper.asResultOrThrow(hatf16BinaryOp.operands().get(1)).op());
-                if (references.get(1)) {
+                if (isSecondOperandReference) {
                     rarrow().id(VALUE);
                 } else if (!OpHelper.isPrimitiveResult(hatf16BinaryOp.operands().get(1))) {
                     dot().id(VALUE);
@@ -522,7 +543,9 @@ public abstract class C99HATKernelBuilder<T extends C99HATKernelBuilder<T>> exte
         return brace(_->
             paren(_-> {
                 recurse( OpHelper.asResultOrThrow(hatF16BinaryOp.operands().getFirst()).op());
-                if (hatF16BinaryOp.references().getFirst()) {
+                boolean isFirstOperandReference = HATPhaseUtils.isArrayReference(lookup(), hatF16BinaryOp.operands().get(0));
+                boolean isSecondOperandReference = HATPhaseUtils.isArrayReference(lookup(), hatF16BinaryOp.operands().get(1));
+                if (isFirstOperandReference) {
                     rarrow().id(VALUE);
                 } else if (!OpHelper.isPrimitiveResult(hatF16BinaryOp.operands().getFirst())) {
                     dot().id(VALUE);
@@ -531,7 +554,7 @@ public abstract class C99HATKernelBuilder<T extends C99HATKernelBuilder<T>> exte
                 }
                 sp().id(hatF16BinaryOp.binaryOperationType().symbol()).sp();
                 recurse( OpHelper.asResultOrThrow(hatF16BinaryOp.operands().get(1)).op());
-                if (hatF16BinaryOp.references().get(1)) {
+                if (isSecondOperandReference) {
                     rarrow().id(VALUE);
                 } else if (!OpHelper.isPrimitiveResult(hatF16BinaryOp.operands().get(1))) {
                     dot().id(VALUE);
@@ -753,9 +776,9 @@ public abstract class C99HATKernelBuilder<T extends C99HATKernelBuilder<T>> exte
     @Override
     public final T invokeOp( JavaOp.InvokeOp invokeOp) {
         var invoke = invoke(scopedCodeBuilderContext().lookup(),invokeOp);
-        if (C99VecHandler.isVecInvoke( invoke)){ // hacked for vec op calls.
-            C99VecHandler.handleInvoke(self(),invoke);
-        } else if (invoke.refIs(IfaceValue.class)) {
+        if (C99VecAndMatHandler.isVecInvoke( invoke)){ // hacked for vec op calls.
+            C99VecAndMatHandler.handleInvoke(self(),invoke);
+        }else if (invoke.refIs(IfaceValue.class)) {
             if (invoke instanceof Invoke.Virtual && invoke.operandCount() == 1 && invoke.returnsInt() && invoke.nameMatchesRegex(atomicIncRegex)) {
                 if (invoke.resultFromOperandNOrThrow(0) instanceof Op.Result instanceResult) {
                     atomicInc(instanceResult,
